# JeffV2

./: .replit  analyze_sheets.py  import_data.py  importar_cronograma.py  importar_empresas.py  pyproject.toml  quick_analyze.py  replit.md
app/: auth.py  database.py  main.py  schemas.py  seed_data.py
app/models/: __init__.py  models.py
app/routes/: alertas.py  auth.py  bi.py  chatbot.py  consultores.py  contatos.py  contratos.py  cronogramas.py  empresas.py  importacao.py  linha_educacional.py  linha_tecnologia.py  propostas.py  relatorios.py
app/static/css/: style.css
app/static/js/: contratos.js  cronograma.js  dashboard.js  importacao.js  prospeccao.js
app/templates/: alertas.html  base.html  chatbot.html  consultores.html  contatos.html  contratos.html  cronograma.html  dashboard.html  empresas.html  importacao.html  linha_educacional.html  linha_tecnologia.html  login.html  prospeccao.html  relatorios.html  usuarios.html
attached_assets/: Controle Geral_Considerações_1760640853336.xlsx  Pasted--1-Sistema-de-Autentica-o-e-Controle-de-Acesso-3-n-veis-de-permiss-o-Admin-Consultor-e-Financ-1760642396427_1760642396428.txt  Pasted-Prompt-Completo-Sistema-Python-Base-nas-3-planilhas-Objetivo-Desenvolver-um-sistema-completo-d-1760637952927_1760637952929.txt  contats_1760739018153.xlsx  crnograma principal jef_1760738825647.xlsx  linha educacional_1760739298496.xlsx  linha tecnologia_1760739169405.xlsx
