[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=5.0.0",
    "email-validator>=2.3.0",
    "fastapi>=0.119.0",
    "jinja2>=3.1.6",
    "openai>=2.4.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "passlib>=1.7.4",
    "plotly>=6.3.1",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.2",
    "python-dotenv>=1.1.1",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.20",
    "reportlab>=4.4.4",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.37.0",
    "xlrd>=2.0.2",
]
